--- a/Hitomi-Scroll-Viewer/SearchPageComponent/BookmarkItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/BookmarkItem.xaml
@@ -60,15 +60,10 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Spacing="16">
-            <Button x:Name="RemoveBtn">
+            <Button x:Name="RemoveBtn" Grid.Row="0">
                 <SymbolIcon Symbol="Delete"/>
             </Button>
-            <Button x:Name="ReloadBtn" ToolTipService.ToolTip="Reload Images">
-                <SymbolIcon Symbol="Refresh"/>
-            </Button>
-        </StackPanel>
-        <Grid Grid.Row="1" RowSpacing="16">
+            <Grid Grid.Row="1" RowSpacing="16">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
