--- a/Hitomi-Scroll-Viewer/SearchPageComponent/SearchFilterItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/SearchFilterItem.xaml
@@ -9,7 +9,9 @@
 
     Orientation="Horizontal"
     Background="White"
-    Padding="8 2 2 2">
+    Padding="8 2 2 2"
+    BorderBrush="{ThemeResource ButtonBorderThemeBrush}"
+    BorderThickness="{ThemeResource ButtonBorderThemeThickness}">
     <TextBlock Text="{x:Bind TagName}"/>
     <Viewbox Width="32">
         <Button Margin="8 0 0 0"
