--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -95,12 +95,12 @@
                                     Margin="2 0 0 0"
                                     Click="AddTagToSearchBoxBtn_Clicked">Add</Button>
                         </Grid>
-                        <TextBlock HorizontalAlignment="Center" FontSize="18">Searching Tags</TextBlock>
+                        <TextBlock HorizontalAlignment="Center" FontSize="18">Search Filter Tags</TextBlock>
                         <Border Background="White"
                                 BorderBrush="{ThemeResource ButtonBackgroundThemeBrush}"
                                 BorderThickness="{ThemeResource AutoSuggestListBorderThemeThickness}"
                                 CornerRadius="{ThemeResource ControlCornerRadius}"
-                                MinHeight="100"
+                                MinHeight="50"
                                 Padding="{ThemeResource ButtonPadding}">
                             <ItemsRepeater ItemsSource="{x:Bind _searchFilterItems}">
                                 <ItemsRepeater.Layout>
