--- a/Hitomi-Scroll-Viewer/SearchPageComponent/SearchLinkItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/SearchLinkItem.xaml
@@ -4,7 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    ColumnSpacing="16">
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*"/>
         <ColumnDefinition Width="Auto"/>
@@ -12,8 +13,7 @@
     <HyperlinkButton Grid.Column="0"
                      NavigateUri="{x:Bind _searchLink}"
                      HorizontalAlignment="Stretch">
-        <TextBlock Grid.Column="1"
-                   TextWrapping="WrapWholeWords"
+        <TextBlock TextWrapping="WrapWholeWords"
                    FontSize="10"
                    Text="{x:Bind _displayText}"/>
     </HyperlinkButton>
