--- a/Hitomi-Scroll-Viewer/SearchPageComponent/BookmarkItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/BookmarkItem.xaml
@@ -26,7 +26,7 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="TitleTextBlock" Grid.Row="0" FontWeight="SemiBold"/>
+        <TextBlock x:Name="TitleTextBlock" Grid.Row="0" Style="{StaticResource SubtitleTextBlockStyle}"/>
         <TextBlock x:Name="IdTextBlock" Grid.Row="2"/>
         <TextBlock x:Name="ArtistTextBlock" Grid.Row="1"/>
         <HyperlinkButton x:Name="ImageContainerWrapper" Grid.Row="3" HorizontalAlignment="Stretch">
