--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -34,6 +34,7 @@
                             BorderBrush="DeepPink"
                             HorizontalAlignment="Center"
                             Content="Create and Copy Search Link"
+                            IsEnabled="False"
                             />
                     <ListView x:Name="SearchLinkItemsListView"
                               ItemsSource="{x:Bind _searchLinkItems}"
@@ -51,10 +52,10 @@
                                  AcceptsReturn="True"
                                  PlaceholderText="Enter Gallery id(s) or an URL(s) Here. e.g. 2058075 or https://hitomi.la/..."
                                  />
-                        <Button Grid.Column="1"
-                                HorizontalAlignment="Center" VerticalAlignment="Stretch"
+                        <Button Grid.Column="1" Padding="32"
+                                HorizontalAlignment="Center" VerticalAlignment="Center"
                                 Click="DownloadBtn_Clicked">
-                            <TextBlock Text="Download Gallery" TextWrapping="WrapWholeWords"/>
+                            <SymbolIcon Symbol="Download"></SymbolIcon>
                         </Button>
                     </Grid>
                     <ListView x:Name="DownloadItemsListView" ItemsSource="{x:Bind _downloadingItems}"
@@ -82,32 +83,23 @@
                                  TextWrapping="Wrap"
                                  FontSize="16"
                                  />
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="3*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <ComboBox x:Name="TagListComboBox" Grid.Column="0"
+                        <ComboBox x:Name="TagListComboBox" ItemsSource="{x:Bind _tagsDictKeys}"
                                       SelectionChanged="TagListComboBox_SelectionChanged"
                                       HorizontalAlignment="Stretch"/>
-                            <Button x:Name="AddTagToSearchBoxBtn"
-                                    Grid.Column="1" HorizontalAlignment="Right"
-                                    Margin="2 0 0 0"
-                                    Click="AddTagToSearchBoxBtn_Clicked">Add</Button>
-                        </Grid>
-                        <TextBlock HorizontalAlignment="Center" FontSize="18">Search Filter Tags</TextBlock>
-                        <Border Background="White"
-                                BorderBrush="{ThemeResource ButtonBackgroundThemeBrush}"
-                                BorderThickness="{ThemeResource AutoSuggestListBorderThemeThickness}"
-                                CornerRadius="{ThemeResource ControlCornerRadius}"
-                                MinHeight="50"
-                                Padding="{ThemeResource ButtonPadding}">
+                        <StackPanel MinHeight="50"
+                                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                    CornerRadius="{StaticResource OverlayCornerRadius}"
+                                    BorderThickness="1"
+                                    Padding="16"
+                                    Spacing="16">
+                            <TextBlock HorizontalAlignment="Center" Style="{StaticResource SubtitleTextBlockStyle}">Select tags to create search links</TextBlock>
                             <ItemsRepeater ItemsSource="{x:Bind _searchFilterItems}">
                                 <ItemsRepeater.Layout>
                                     <controls:WrapLayout VerticalSpacing="8" HorizontalSpacing="8"/>
                                 </ItemsRepeater.Layout>
                             </ItemsRepeater>
-                        </Border>
+                        </StackPanel>
                     </StackPanel>
                     <StackPanel x:Name="ControlButtonContainer" Grid.Column="1"
                                 Orientation="Vertical" Spacing="20" Margin="0 0 20 0"/>
