--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -5,23 +5,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    KeyDown="HandleKeyDown">
     <Grid>
-        <ScrollViewer x:Name="MainScrollViewer"
-                      ViewChanging="HandleScrollViewChange"
-                      ZoomMode="Enabled"
-                      IsTabStop="True"
-                      >
-            <StackPanel x:Name="ImageContainer"
-                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </ScrollViewer>
+        <ContentControl x:Name="ImageContainer"/>
         <CommandBar x:Name="TopCommandBar"
                     ClosedDisplayMode="Minimal"
                     OverflowButtonVisibility="Collapsed"
                     HorizontalAlignment="Center"
                     IsOpen="True"
-                    Background="{ThemeResource AppBarBackgroundThemeBrush}">
+                    Style="{ThemeResource DefaultCommandBarStyle}">
             <AppBarButton x:Name="GoBackBtn"
                           MinWidth="50"
                           Icon="Back"
@@ -38,7 +30,6 @@
                           MinWidth="120"
                           Icon="ViewAll"
                           Click="HandleViewModeBtnClick"
-                          IsEnabled="False"
                           />
             <AppBarSeparator MinWidth="30"/>
             <AppBarElementContainer>
@@ -46,13 +37,11 @@
                         MinWidth="240"
                         FontSize="14"
                         ValueChanged="SetScrollSpeed"
-                        IsEnabled="False"
                         />
             </AppBarElementContainer>
             <AppBarSeparator MinWidth="30"/>
             <AppBarToggleButton x:Name="AutoScrollBtn"
                                 MinWidth="90"
-                                IsEnabled="False"
                                 Icon="Play"
                                 Label="Start Auto Page Turning / Scrolling"
                                 />
@@ -66,7 +55,7 @@
             <AppBarSeparator MinWidth="30"/>
             <AppBarElementContainer>
                 <ComboBox x:Name="ViewDirectionSelector" MinWidth="150"
-                          SelectionChanged="HandleViewDirectionChange"
+                          SelectionChanged="ViewDirectionSelector_SelectionChanged"
                           Header="View Direction">
                     <ComboBoxItem>Top to Bottom</ComboBoxItem>
                     <ComboBoxItem>Left to Right</ComboBoxItem>
@@ -76,7 +65,7 @@
             <AppBarSeparator MinWidth="30"/>
             <AppBarElementContainer>
                 <ComboBox x:Name="NumOfPagesSelector"
-                          SelectionChanged="HandleNumOfPagesChange"
+                          SelectionChanged="NumOfPagesSelector_SelectionChanged"
                           Header="Page Display Number"
                           ToolTipService.ToolTip="Set number of pages to display in Default Mode">
                     <ComboBoxItem>1</ComboBoxItem>
@@ -88,8 +77,7 @@
             <AppBarSeparator MinWidth="30"/>
             <AppBarElementContainer>
                 <ComboBox x:Name="PageNavigator"
-                          SelectionChanged="HandlePageSelectionChange"
-                          IsEnabled="False"
+                          SelectionChanged="PageNavigator_SelectionChanged"
                           Header="Go to page"
                           MinWidth="90">
                 </ComboBox>
@@ -104,10 +92,6 @@
                 CornerRadius="16">
             <TextBlock x:Name="PageNumText" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
-        <ProgressBar x:Name="LoadingProgressBar"
-                     VerticalAlignment="Bottom" Background="Transparent"
-                     Margin="0, 0, 0, 4"
-                     Visibility="Collapsed"/>
         <Viewbox x:Name="ActionIndicator"
                  Width="500"
                  HorizontalAlignment="Center"
