--- a/Hitomi-Scroll-Viewer/ImageWatchingPageComponent/GroupedImagePanel.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPageComponent/GroupedImagePanel.xaml
@@ -4,5 +4,7 @@
     x:Class="Hitomi_Scroll_Viewer.ImageWatchingPageComponent.GroupedImagePanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    HorizontalAlignment="Center"
+    VerticalAlignment="Center"
     LastChildFill="False">
 </controls:DockPanel>
