--- a/Hitomi-Scroll-Viewer/MainWindow.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindow.xaml
@@ -6,5 +6,5 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="Hitomi Scroll Viewer">
-    <Frame x:Name="RootFrame"/>
+    <Frame x:Name="RootFrame" KeyDown="RootFrame_KeyDown" PointerPressed="RootFrame_PointerPressed"/>
 </Window>
